# kiwi

./: .context_state.json  .gitignore  ARCHITECTURE.md  AUDIT-REPORT-2026-05-29.md  AUTO-ENFORCEMENT.md  AUTO_LEARNING_ENABLED.md  DEPLOYMENT-VPS-2026-05-27.md  ENFORCEMENT.md  HANDOFF-KIWI-SELF-UPGRADE-2026-05-24.md  HANDOFF-LEARN-FROM-FOLDER-2026-05-24.md  HANDOFF-ROLLBACK-INTEGRATION-2026-05-27.md  HANDOFF-SELF-IMPROVEMENT-ACTIVATED-2026-05-25.md  HANDOFF-SESSION-2026-05-27-FINAL-99.md  HANDOFF-SESSION-2026-05-27-PART2.md  HANDOFF-SESSION-2026-05-27-UPGRADE-98.5.md  HANDOFF-SESSION-2026-05-27-UPGRADE-98.md  HONEST-ASSESSMENT-2026-05-27.md  HONEST-RE-ASSESSMENT-2026-05-27.md  INCREMENTAL-SCANNING-GUIDE.md  NEXT-SESSION-PROMPT-96.md  OBJECTIVE-EVALUATION-100.md  PHASE2-ROLLBACK-COMPLETE.md  PHASE3-AST-COMPLETE.md  PRIVACY.md  PRODUCTION-DEPLOYMENT-GUIDE.md  PRODUCTION-VALIDATION-REPORT.md  README-CLI.md  README-MCP.md  README.md  ROADMAP.md  SESSION-SUMMARY-2026-05-25.md  UPGRADE-PLAN-90.md  UPGRADE-REPORT-90.md  UPGRADE-SUMMARY.md  __main__.py  _meta.json  add_nosec_inline.py  benchmark_results.json  benchmark_semgrep.py  benchmark_simple.py  (+52 more)
.kiwi_sessions/: learning.db  rbac.db
agent/: __init__.py  ab_testing.py  auto_tune.py  cli.py  confidence_decay.py  context.py  correlation.py  cost.py  feedback_loop.py  guardrail.py  init_pipeline.py  integration.py  integration_config.json  learn.py  loop.py  orchestrator.py  prompts.py  retry.py  scoring.py  state.py  summarizer.py  test_ab_testing.py  test_auto_tune.py  test_confidence_decay.py  test_correlation.py  tools.py  (+2 more)
(+1729 files in other folders)
